<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
                tools:context="ron.fuelmanager.Activity.UserSettingActivity">


    <ProgressBar
        android:id="@+id/progress_user_setting"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/view_user_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_below="@id/etEmail"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFirstName"
            android:layout_marginTop="2dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etLastName"
            android:layout_marginTop="2dp"
            android:hint="@string/city"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etCity"
            android:layout_marginTop="2dp"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>

        <ImageButton
            android:id="@+id/btnImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@id/etAddress"
            android:src="@drawable/empty"
            android:visibility="visible"
            android:contentDescription="user image"/>

        <Button
            android:id="@+id/btnSave"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/btnImage"
            android:layout_marginTop="2dp"
            android:text="@string/save"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>
