<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ron.fuelmanager.Activity.MainActivity">

    <ProgressBar
        android:id="@+id/progress_main"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:id="@+id/view_budget"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0050ef"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_prompt_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/prompt_remaining_budget"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/tv_currency_sign"
                android:layout_toStartOf="@+id/tv_currency_sign"
                android:maxLength="6"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_currency_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_budget"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/prompt_currency_symbol"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_pick_route"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="#00aba9"
            android:gravity="center">

            <EditText
                android:id="@+id/btn_pick_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:backgroundTint="#ffffff"
                android:ems="12"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_choose_direction"
                android:inputType="none"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_route_summary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_weight="5"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/prompt_route_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Route Distance"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_route_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/prompt_route_dis"
                android:layout_toEndOf="@+id/prompt_route_dis"
                android:layout_toRightOf="@+id/prompt_route_dis"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/text_route_dis"
                android:layout_toEndOf="@+id/text_route_dis"
                android:layout_toRightOf="@+id/text_route_dis"
                android:text="@string/prompt_km"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/prompt_route_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_route_dis"
                android:text="@string/prompt_route_price"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_route_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/text_route_dis"
                android:layout_below="@id/prompt_route_price"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/text_route_price"
                android:layout_toEndOf="@+id/text_route_price"
                android:layout_toRightOf="@+id/text_route_price"
                android:text="@string/prompt_currency_symbol"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_route_price"
                android:layout_centerInParent="true"
                android:layout_marginTop="7dp"
                android:layout_toLeftOf="@id/btn_ok"
                android:layout_toStartOf="@id/btn_ok"
                android:text="@string/prompt_btn_cancel" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_route_price"
                android:layout_marginTop="7dp"
                android:text="@string/prompt_btn_ok" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
